--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^19.3.0",
     "@react-native-firebase/auth": "^19.3.0",
     "@react-native-firebase/firestore": "^19.0.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
@@ -36,11 +37,14 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-svg": "^15.11.2",
-    "xlsx": "^0.18.5"
+    "react-native-vector-icons": "^10.2.0",
+    "xlsx": "^0.18.5",
+    "expo-camera": "~16.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
   "private": true
